# crime_team

./: .crime-team.json  .gitignore  CLAUDE.md  Crime-Team-Dev.ps1  Crime-Team.ps1  LICENSE  README.md  package-lock.json  package.json
.claude/skills/run-crime-team-orchestrator/: SKILL.md  driver.mjs  gui-screenshot.ps1
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
desktop/: package.json
desktop/src/: index.html  main.js  presets.js  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: CHANGELOG.md  FOLLOWUPS.md
scripts/: salvage-integrate.mjs
src/: agent.ts  citations.ts  cli.ts  config.ts  dispatch.ts  events.ts  orchestrator.ts  types.ts
test/: agent-safety.test.mjs  agent.test.mjs  citations.test.mjs  config.test.mjs  dispatch.test.mjs  events.test.mjs  orchestrate.test.mjs  orchestrator.test.mjs
