[package]
name = "crime-team-desktop"
version = "0.1.0"
description = "Desktop GUI for the crime-team multi-agent orchestrator"
edition = "2021"
rust-version = "1.77"

[lib]
name = "crime_team_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
