[package]
name = "crime-team-desktop"
version = "0.1.0"
description = "Desktop GUI for the crime-team multi-agent orchestrator"
edition = "2021"
rust-version = "1.77"

[lib]
name = "crime_team_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

# Job Objects: assign the orchestrator subprocess tree to a kill-on-close job so
# app exit/crash/cancel reaps node + openclaw + claude + git (no orphan token burn).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
